--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@
     --pheasant-yellow-light: #FFF1A3;
     --pheasant-yellow-light-2: #FFF5BD;
     --pheasant-brown: #f2871c;
-    --egg-green: #daebd0;
-    --header-height: 30px;
+    --egg-green: #e3f0db;
+    --light-gray: #f7f7f7;
+    --header-height: 40px;
 }
 
 html{
     margin: 0;
     padding: 0;
+}
+
+a {
+    color: var(--pheasant-red);
+    text-decoration: none;
 }
 
 body{
@@ -27,31 +33,34 @@ body{
 }
 
 header {
-    display: flex;
+    background-color: var(--pheasant-blue);
 }
 
-header .header-row{
-    display: flex;
-    align-items: center;
+header .header-row {
     position: fixed;
     top: 0;
-    left: 0;
+    background-color: var(--sky-blue);
     width: 100%;
     height: var(--header-height);
-    padding: 5px;
-    background-color: var(--sky-blue);
-    color: var(--pheasant-red);
-    z-index: 1;
     box-shadow: 0px 1px 2px #cfcfcf;
+    z-index: 1;
+}
+
+header .header-row-contents {
+    display: flex;
+    align-items: center;
+    height: var(--header-height);
+    color: var(--pheasant-red);
 }
 
 .menu-button{
     font-size: 28px;
+    padding-left: 10px;
 }
 
 header .header-title {
     font-family: Pattaya;
-    margin-left: 8px;
+    margin-left: 10px;
     /* display: none; */
 }
 
@@ -62,7 +71,7 @@ header .nav {
     left: 0;
     width: 0px;
     height: 100%;
-    background-color: var(--pheasant-blue);
+    background-color: var(--light-gray);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 20px;
@@ -71,10 +80,8 @@ header .nav {
 header li {
     padding: 8px 8px 8px 0px;
     font-family: Sansita;
-    text-decoration: none;
     font-size: 25px;
     transition: 0.3s;
-    color: var(--pheasant-red);
     display: block;
 }
 
@@ -193,7 +200,7 @@ h2 {
     text-align: center;
     font-size: 26px;
     font-family: Alegreya Sans;
-    margin: 5px 0px -5px;
+    margin: 10px 0px -8px;
 }
 
 .project-link {
@@ -210,6 +217,12 @@ h2 {
     text-align: center;
     position: absolute;
     bottom: 0px;
+}
+
+.blog-link {
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 390px) {
@@ -273,12 +286,10 @@ h2 {
     header .header-row .nav {
         position: static;
         width: auto;
-        display: flex;
-        flex-direction: row;
         background-color: var(--sky-blue);
         margin-top: -50px;
         margin-left: auto;
-        margin-right: 20px;
+        margin-right: 30px;
         padding-bottom: 5px;
         overflow-y: hidden;
     }
@@ -314,5 +325,19 @@ h2 {
 
     .project-tile {
         width: 32%;
+    }
+}
+
+@media only screen and (min-width: 1140px) {
+    header .header-row-contents {
+        width: 1140px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    main {
+        width: 1130px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
