--- a/style.css
+++ b/style.css
@@ -159,24 +159,38 @@ main {
 
 h2 {
     font-family: Sansita;
-    font-size: 34px;
+    font-size: 40px;
+    text-align: center;
 }
 
 .tool-kit {
 
 }
 
+h3 {
+    font-size: 26px;
+    font-family: Alegreya Sans;
+    margin-bottom: 20px;
+}
+
+.tools-list {
+    margin: 0px;
+    padding: 0px;
+}
+
 .tools-list li {
     display: inline-block;
-    margin-right: 10px;
+    margin: 0px 10px 10px 0px;
     list-style-type: none;
     text-align: center;
+    font-size: 17px;
+    font-weight: bold;
 }
 
 .tool-container {
     position: relative;
-    height: 110px;
-    width: 110px;
+    height: 67px;
+    width: 67px;
     border-radius: 50% 20%;
 }
 
@@ -186,8 +200,8 @@ h2 {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    width: 85px;
-    height: 85px;
+    width: 59px;
+    height: 59px;
     display: block;
     background-color: white;
 }
@@ -198,8 +212,8 @@ h2 {
     left: 50%;
     transform: translate(-50%, -50%);
     display: block;
-    height: 55px;
-    width: 55px;
+    height: 38px;
+    width: 38px;
     background-color: white;
 }
 
@@ -244,8 +258,6 @@ h2 {
 
 .project-tile h3 {
     text-align: center;
-    font-size: 26px;
-    font-family: Alegreya Sans;
     margin: 10px 0px -8px;
 }
 
@@ -269,6 +281,7 @@ h2 {
     display: block;
     font-size: 20px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 @media only screen and (min-width: 390px) {
@@ -367,6 +380,26 @@ h2 {
     main{
         margin-left: 2.5%;
         margin-right: 2.5%;
+    }
+
+    .tools-list li {
+        font-size: 20px;
+        margin-right: 15px;
+    }
+
+    .tool-container {
+        height: 97px;
+        width: 97px;
+    }
+
+    .tool-container .inner-container {
+        width: 85px;
+        height: 85px;
+    }
+
+    .tool-container img {
+        height: 52px;
+        width: 52px;
     }
 
     .project-tile {
