--- a/style.css
+++ b/style.css
@@ -106,21 +106,28 @@ header .close-button {
 
 header .welcome-section {
     display: block;
-    height: 92vw;
-    max-height: 100vh;
+    height: calc(100vh - var(--header-height));
     width: 100%;
-    background-color: #00435C;
+    background-color: var(--pheasant-blue);
+    position: relative;
+}
+
+header .welcome-contents {
+    transform: translateY(-50%);
+    position: relative;
+    top: 40%;
+    
 }
 
 header .welcome-text {
     font-family: Pattaya;
-    color: #FF4238;
+    color: var(--pheasant-red);
     position: relative;
-    top: 12vh;
     text-align: center;
     margin-left: -1vw;
     font-size: 20vw;
-    margin-bottom: 40px;
+    padding: 0px;
+    margin-bottom: -55px;
 }
 
 header .that-word {
@@ -144,8 +151,8 @@ header .welcome-slogan {
     color: #fffcf0;
     text-align: center;
     font-size: 6vw;
-    margin-top: .1em;
-    display: none;
+    padding: 0px;
+    margin: 0px;
 }
 
 /* This accounts for the height of the header
@@ -166,7 +173,7 @@ main {
 
 h2 {
     font-family: Sansita;
-    font-size: 44px;
+    font-size: 34px;
     text-align: center;
 }
 
@@ -175,7 +182,7 @@ h2 {
 }
 
 h3 {
-    font-size: 26px;
+    font-size: 24px;
     font-family: Alegreya Sans;
     margin-bottom: 20px;
 }
@@ -249,6 +256,8 @@ h3 {
     background-color: #e8e8e8;
     margin-bottom: 30px;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 5px;
     position: relative;
 }
@@ -293,9 +302,9 @@ h3 {
     margin-bottom: 70px;
 }
 
-.blog-link {
+.blog-section a {
     display: block;
-    font-size: 23px;
+    font-size: 18px;
     margin-bottom: 10px;
     text-align: center;
 }
@@ -312,16 +321,19 @@ footer ul {
     position: absolute;
     top: 40%;
     left: 50%;
+    padding-left: 0px;
     transform: translate(-50%, -50%);
-    
 }
 
 footer li {
     display: inline-block;
-    margin-right: 40px;
+    font-size: 26px;
+    margin-right: 25px;
     list-style-type: none;
-    font-size: 40px;
+}
 
+footer li:last-child {
+    margin-right: 0px;
 }
 
 footer a {
@@ -334,9 +346,18 @@ footer a:hover {
 
 @media only screen and (min-width: 390px) {
     .project-tile {
-        width: 350px;
+        max-width: 350px;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .blog-section a {
+        font-size: 20px;
+    }
+
+    footer li {
+        font-size: 30px;
+        margin-right: 30px;
     }
 }
 
@@ -346,7 +367,7 @@ footer a:hover {
 
     header .welcome-text {
         font-size: 19vw;
-        margin-bottom: 30px;
+        margin-bottom: -60px;
     }
 
     @keyframes embiggen-that {
@@ -357,7 +378,6 @@ footer a:hover {
 
     header .welcome-slogan {
         font-size: 5vw;
-        margin-top: .2em;
     }
 
     .project-list {
@@ -373,7 +393,24 @@ footer a:hover {
     }
 }
 
-@media only screen and (min-width: 801px) {
+@media only screen and (min-width: 750px) {
+    header .welcome-text {
+        margin-bottom: -70px;
+    }
+
+    .project-list {
+        width: 710px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    footer li {
+        font-size: 34px;
+        margin-right: 34px;
+    }
+}
+
+@media only screen and (min-width: 840px) {
     :root {
         --header-height: 50px;
     }
@@ -406,12 +443,9 @@ footer a:hover {
         margin-left: 15px;
     }
 
-    header .welcome-section {
-        height: 100vh;
-    }
-
     header .welcome-text {
         font-size: 150px;
+        margin-bottom: -80px;
     }
 
     @keyframes embiggen-that {
@@ -422,12 +456,19 @@ footer a:hover {
 
     header .welcome-slogan {
         font-size: 40px;
-        margin-top: -40px;
     }
 
     main{
         margin-left: 2.5%;
         margin-right: 2.5%;
+    }
+
+    h2 {
+        font-size: 42px;
+    }
+
+    h3 {
+        font-size: 26px;
     }
 
     .tools-list li {
@@ -450,21 +491,43 @@ footer a:hover {
         width: 52px;
     }
 
+    .project-list {
+        width: 100%;
+    }
+
     .project-tile {
         width: 32%;
     }
+
+    .blog-section a {
+        font-size: 22px;
+    }
+
+    footer li {
+        font-size: 37px;
+        margin-right: 37px;
+    }
 }
 
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 1000px) {
     header .header-row-contents {
-        width: 1140px;
+        width: 1000px;
         margin-left: auto;
         margin-right: auto;
     }
 
     main {
-        width: 1130px;
+        width: 990px;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .blog-section a {
+        font-size: 23px;
+    }
+
+    footer li {
+        font-size: 40px;
+        margin-right: 40px;
     }
 }
